Added footer and about us

--- a/main.html
+++ b/main.html
@@ -103,6 +103,84 @@
     </div>
 </div>
 
+<section class="about-us">
+    <div class="about">
+      <img src="./assests/Team.JPG" class="pic" />
+      <div class="text">
+        <h2>About Us</h2>
+        <h5>Front-end Developers & <span>Designers</span></h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita natus ad sed harum itaque ullam enim quas, veniam accusantium, quia animi id eos adipisci iusto molestias asperiores explicabo cum vero atque amet corporis! Soluta illum facere consequuntur magni. Ullam dolorem repudiandae cumque voluptate consequatur consectetur, eos provident necessitatibus reiciendis corrupti!</p>
+        <div class="data">
+          <a href="#" class="hire">Hire us</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="footer">
+      <div class="heading">
+        <h2>Chethu Gowda<sup>™</sup></h2>
+      </div>
+      <div class="content">
+        <div class="services">
+          <h4>Services</h4>
+          <p><a href="#">App development</a></p>
+          <p><a href="#">Web development</a></p>
+          <p><a href="#">DevOps</a></p>
+          <p><a href="#">Web designing</a></p>
+        </div>
+        <div class="social-media">
+          <h4>Social</h4>
+          <p>
+            <a href="#"
+              ><i class="fab fa-linkedin"></i> Linkedin</a
+            >
+          </p>
+          <p>
+            <a href="#"
+              ><i class="fab fa-twitter"></i> Twitter</a
+            >
+          </p>
+          <p>
+            <a href="https://github.com/chethu9680" target="_blank"
+              ><i class="fab fa-github"></i> Github</a
+            >
+          </p>
+          <p>
+            <a href="#"
+              ><i class="fab fa-facebook"></i> Facebook</a
+            >
+          </p>
+          <p>
+            <a href="#"
+              ><i class="fab fa-instagram"></i> Instagram</a
+            >
+          </p>
+        </div>
+        <div class="links">
+          <h4>Quick links</h4>
+          <p><a href="#">Home</a></p>
+          <p><a href="#">About</a></p>
+          <p><a href="#">Admin</a></p>
+          <p><a href="#">Contact</a></p>
+        </div>
+        <div class="details">
+          <h4 class="address">Address</h4>
+          <p>
+            Presidency University Dibbur Near rajankunte Yelahanka Bangalore
+          </p>
+          <h4 class="mobile">Mobile</h4>
+          <p><a href="#">9742625703</a></p>
+          <h4 class="mail">Email</h4>
+          <p><a href="#">chethan9680@gmail.com</a></p>
+        </div>
+      </div>
+      <footer>
+        <hr />
+        © 2024 TeamLazy.
+      </footer>
+  </div>
+
   
     <script src="script.js"></script>
 </body>
