added contact form

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             </div>
         </div>
     </div>
+
     <section class="about-us">
       <div class="about">
         <img src="./assests/Team.JPG" class="pic" />
@@ -120,6 +121,37 @@
         </div>
       </div>
     </section>
+
+    <div class="shade">
+		<div class="blackboard">
+				<div class="form">
+                    <p>
+                        <label>Name: </label>
+                        <input type="text" id="name" />
+                    </p>
+                    <p>
+                        <label>Email: </label>
+                        <input type="text" id="email" />
+                    </p>
+                    <p>
+                        <label>Phone: </label>
+                        <input type="tel" id="phone" />
+                    </p>
+                    <p>
+                        <label>Subject: </label>
+                        <input type="text" id="subject" />
+                    </p>
+                    <p>
+                        <label>Message: </label>
+                        <textarea id="message"></textarea>
+                    </p>
+                    <p class="wipeout">
+                        <input type="submit" value="Send" onclick="contact()" />
+                    </p>
+				</div>
+		</div>
+</div>
+
 
     <div class="footer">
         <div class="heading">
@@ -184,6 +216,8 @@
           © 2024 TeamLazy.
         </footer>
     </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
