--- a/index.html
+++ b/index.html
@@ -122,36 +122,45 @@
       </div>
     </section>
 
-    <div class="shade">
-		<div class="blackboard">
-				<div class="form">
-                    <p>
-                        <label>Name: </label>
-                        <input type="text" id="name" />
+    <div class="contact_us">
+        <div class="responsive-container-block bigContainer">
+          <div class="responsive-container-block Container">
+            <div class="responsive-cell-block wk-desk-5 wk-ipadp-4 wk-tab-12 wk-mobile-12">
+              <img class="mainImg" src="./assests/contact.jfif">
+            </div>
+            <div class="responsive-cell-block wk-desk-7 wk-ipadp-8 wk-tab-12 wk-mobile-12">
+              <p class="text-blk heading">
+                Contact Me
+              </p>
+              <form class="formTable" id="izml">
+                <div class="firstRow">
+                  <div class="fullNameArea">
+                    <p class="cardHead">
+                      Full Name
                     </p>
-                    <p>
-                        <label>Email: </label>
-                        <input type="text" id="email" />
+                    <input class="fullName" id="fullName" name="fullName" type="text">
+                  </div>
+                  <div class="emailArea">
+                    <p class="cardHead">
+                      Email Address
                     </p>
-                    <p>
-                        <label>Phone: </label>
-                        <input type="tel" id="phone" />
-                    </p>
-                    <p>
-                        <label>Subject: </label>
-                        <input type="text" id="subject" />
-                    </p>
-                    <p>
-                        <label>Message: </label>
-                        <textarea id="message"></textarea>
-                    </p>
-                    <p class="wipeout">
-                        <input type="submit" value="Send" onclick="contact()" />
-                    </p>
-				</div>
-		</div>
-</div>
-
+                    <input class="email" id="email" name="email" type="text">
+                  </div>
+                </div>
+                <div class="messageArea">
+                  <p class="cardHead">
+                    Message
+                  </p>
+                  <textarea class="message" cols="30" id="message" name="message" rows="10"></textarea>
+                </div>
+                <a class="submit" href="#" id="w-c-s-bgc_p-1-dm-id-4" onclick="contact()" >
+                  Send Message
+                </a>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <div class="footer">
         <div class="heading">
