--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </nav>
     <div class="landing">
-        <img src="./assests/landing.jpg" alt="">
+        <img src="./assests/dasara.jpg" alt="">
     </div>
     <div id="todo-container">
         <div class="task-container">
@@ -91,12 +91,12 @@
                 <div class="faculty-subject">Big-data</div>
             </div>
             <div class="faculty">
-                <img src="./assests/bennet-sir.jpg" alt="Faculty 6" class="faculty-image">
+                <img src="./assests/siraj-ahmed.webp" alt="Faculty 6" class="faculty-image">
                 <div class="faculty-name">Siraj Ahmed s</div>
                 <div class="faculty-subject">Neural Networks</div>
             </div>
             <div class="faculty">
-                <img src="./assests/bennet-sir.jpg" alt="Faculty 7" class="faculty-image">
+                <img src="./assests/Shwetha.jpg" alt="Faculty 7" class="faculty-image">
                 <div class="faculty-name">Shwetha Singh</div>
                 <div class="faculty-subject">DHV</div>
             </div>
@@ -110,7 +110,7 @@
 
     <section class="about-us">
       <div class="about">
-        <img src="./assests/Team.JPG" class="pic" />
+        <img src="./assests/about.jpg" class="pic" />
         <div class="text">
           <h2>About Us</h2>
           <h5>Front-end Developers & <span>Designers</span></h5>
