--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="text">
           <h2>About Us</h2>
           <h5>Front-end Developers & <span>Designers</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita natus ad sed harum itaque ullam enim quas, veniam accusantium, quia animi id eos adipisci iusto molestias asperiores explicabo cum vero atque amet corporis! Soluta illum facere consequuntur magni. Ullam dolorem repudiandae cumque voluptate consequatur consectetur, eos provident necessitatibus reiciendis corrupti!</p>
+          <p>Team Lazy is a creative powerhouse specializing in frontend applications. We combine sleek design with user-friendly interfaces to deliver exceptional digital experiences. Our laid-back approach fuels innovation, allowing us to think outside the box. Each member brings unique skills, collaborating seamlessly to bring ideas to life. With a focus on quality and style, we make the web a more beautiful place—one project at a time!</p>
           <div class="data">
             <a href="#" class="hire">Hire us</a>
           </div>
