--- a/main.html
+++ b/main.html
@@ -78,12 +78,12 @@
               <div class="faculty-subject">Big-data</div>
           </div>
           <div class="faculty">
-              <img src="./assests/bennet-sir.jpg" alt="Faculty 6" class="faculty-image">
+              <img src="./assests/siraj-ahmed.webp" alt="Faculty 6" class="faculty-image">
               <div class="faculty-name">Siraj Ahmed s</div>
               <div class="faculty-subject">Neural Networks</div>
           </div>
           <div class="faculty">
-              <img src="./assests/bennet-sir.jpg" alt="Faculty 7" class="faculty-image">
+              <img src="./assests/Shwetha.jpg" alt="Faculty 7" class="faculty-image">
               <div class="faculty-name">Shwetha Singh</div>
               <div class="faculty-subject">DHV</div>
           </div>
